# aria

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  setup.bat
.claude/: ARCHITECTURE.md  BUILD.md  DEMO.md  DESIGN.md  DESIGN_FULL.md  LIMITATIONS.md  README.md  STACK.md  TASKS.md  TEST_PLAN.md
.github/workflows/: tests.yml
aria/: __init__.py  __main__.py  app_discovery.py  daemon.py  launcher.py  models.py  planner.py  traces.py  tray.py
aria/backends/: cdp.py
aria/conductor/: local.py  registry.py
cua/: __main__.py  launcher.py  models.py  planner.py
cua/backends/: cdp.py
cua/conductor/: __init__.py  local.py
docs/: launch-writeup.md
docs/superpowers/plans/: 2026-05-24-block-0-scaffold.md
tests/smoke/: __init__.py  smoke_electron.py
tests/unit/: test_app_discovery.py  test_cdp_parser.py  test_cli.py  test_daemon.py  test_launcher.py  test_local_conductor.py  test_models.py  test_planner.py  test_registry.py  test_smoke_electron.py  test_traces.py  test_tray.py
