[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aria"
version = "0.1.0"
description = "Windows semantic computer-use agent using CDP and UIA."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "uiautomation==2.0.20",
    "pywin32==306; platform_system == 'Windows'",
    "comtypes==1.4.5; platform_system == 'Windows'",
    "psutil==6.0.0",
    "websockets==13.0",
    "httpx==0.27.0",
    "openai==1.51.0",
    "fastapi==0.115.0",
    "starlette==0.38.6",
    "uvicorn==0.30.0",
    "pillow==10.4.0",
    "pystray==0.19.5; platform_system == 'Windows'",
    "keyboard==0.13.5; platform_system == 'Windows'",
    "pydantic==2.9.0",
    "typer==0.12.5",
    "click==8.1.7",
    "rich==13.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
]

[project.scripts]
aria = "aria.__main__:app"

[tool.hatch.build.targets.wheel]
packages = ["aria"]

[tool.pytest.ini_options]
testpaths = ["tests/unit"]
